# Rust-small-projects

./: .gitattributes  .gitignore
_enums_/: Cargo.toml
_structs_/: Cargo.toml
_structs_/src/: main.rs
acronym/: Cargo.toml
acronym/src/: lib.rs
anagrams/: Cargo.toml
anagrams/src/: lib.rs
clock/: README.md
clock/src/: lib.rs
evm_partial_impl/: Cargo.toml
evm_partial_impl/src/: opcodes.rs
fibonacci/src/: main.rs
fri/: README.md
fri/src/: lib.rs
guessing_game/src/: main.rs
inclusive_ranges/: Cargo.toml  README.md
inclusive_ranges/src/: main.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
rectangles/src/: main.rs
shamirs_secret_sharing/: Cargo.toml
shamirs_secret_sharing/benches/: benches.rs
shamirs_secret_sharing/src/: README.md  lib.rs
smart_pointers/src/: main.rs
string_slice/: Cargo.toml
string_slice/src/: main.rs
temperature_conversion/src/: main.rs
the_twelve_days_of_christmas/: README.md
