[package]
name = "shamirs_secret_sharing"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.6.5"
num = "0.2.0"
num-bigint = {version = "0.2.2", features = ["rand"]}
num-traits = "0.2.8"

[dev-dependencies]
criterion = "0.3"

# Criterion benchmarks
[[bench]]
path = "./benches/benches.rs"
name = "benches"
harness = false
